--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 
+
+
 :root {
     --aqua: rgb(0, 255, 150);
     --aliceblue:rgb(153, 208, 255);
@@ -618,7 +620,9 @@ img:hover{
     top: 88%;
     transform: rotate(-10deg);
 }
-
+.testo{
+    position: relative;
+    top: 200px}
 .con{
     position: relative;
     overflow: hidden;
@@ -822,7 +826,9 @@ img:hover{
         height: 900px;
     }
 
-    
+    .testo{
+        position: relative;
+        top: 250px}
 .imgg1>#ime{
     left: 95%;
     top: -16%;
@@ -909,7 +915,11 @@ img:hover{
         height: 500px;
         top: 550px;
     }
-    
+    .social{
+        width: 85px;
+        height: 75px;
+        font-size: 15px;
+    }
     .cbk2-bordes{
         width: 100%;
     }
@@ -965,6 +975,26 @@ img:hover{
     }
     .bkk5>h3{
         margin-left: -280px;
+    }
+    .testo{
+        position: relative;
+        top: 150px}
+    .of{
+        top: 300px;
+    }    
+    .on{
+    top: 480px;
+    }
+    .in{
+        top: 450px;
+    }
+    .animation{
+        top: 480px;
+    }
+    .extra{
+        width: 85%;
+        height: 10px;
+        left: 7%;
     }
 }
 
